--- a/plugins/blocks/information/locale/nb_NO/locale.xml
+++ b/plugins/blocks/information/locale/nb_NO/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/blocks/information/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
@@ -14,6 +14,6 @@
  
 <locale name="nb_NO" full_name="Norsk bokmål">
 	<message key="plugins.block.information.displayName">Informasjonsblokk</message>
-	<message key="plugins.block.information.description">Denne programutvidelsen oppretter en informasjonslenke i sidespalten.</message>
+	<message key="plugins.block.information.description">Dette programtillegget oppretter en informasjonslenke i sidemenyen</message>
 	<message key="plugins.block.information.link">Informasjon</message>
 </locale>
