--- a/plugins/blocks/languageToggle/locale/nb_NO/locale.xml
+++ b/plugins/blocks/languageToggle/locale/nb_NO/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/blocks/languageToggle/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
@@ -14,5 +14,5 @@
  
 <locale name="nb_NO" full_name="Norsk bokmål">
 	<message key="plugins.block.languageToggle.displayName">Språkvekslingsblokk</message>
-	<message key="plugins.block.languageToggle.description">Denne programutvidelsen oppretter en språkveksler i sidespalten.</message>
+	<message key="plugins.block.languageToggle.description">Dette programtillegget oppretter en språkveksler i sidemenyen.</message>
 </locale>
