--- a/plugins/gateways/resolver/locale/nb_NO/locale.xml
+++ b/plugins/gateways/resolver/locale/nb_NO/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/gateways/resolver/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
@@ -13,8 +13,8 @@
   -->
  
 <locale name="nb_NO" full_name="Norsk bokmål">
-	<message key="plugins.gateways.resolver.displayName">Resolver Plugin</message>
-	<message key="plugins.gateways.resolver.description">This plugin resolves issues and articles based on citation information.</message>
-	<message key="plugins.gateways.resolver.errors.errorMessage">Unable to resolve a single entity using the specified citation information. Please ensure that the citation information is comprehensive and refers to an entity in this deployment of OJS.</message>
+	<message key="plugins.gateways.resolver.displayName">Resolver</message>
+	<message key="plugins.gateways.resolver.description">Dette programtillegget omformer utgaver og artikler basert på referanseinformasjon</message>
+	<message key="plugins.gateways.resolver.errors.errorMessage">Ikke mulig å omforme et enkeltelement ved å bruke den spesifiserte referanseinformasjonen. Pass på at referanseinformasjonen er omfattende og viser til en enhet i denne bruken av OJS.</message>
 	<message key="plugins.gateways.resolver.exportHoldings">Eksporter beholdning</message>
 </locale>
