--- a/plugins/importexport/pubmed/locale/nb_NO/locale.xml
+++ b/plugins/importexport/pubmed/locale/nb_NO/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/importexport/pubmed/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
@@ -13,22 +13,22 @@
   -->
  
 <locale name="nb_NO" full_name="Norsk bokmål">
-	<message key="plugins.importexport.pubmed.displayName">Programutvidelse for PubMed XML-eksport</message>
-	<message key="plugins.importexport.pubmed.description">Eksporterer artikkelmetadata i PubMed XML-format for indeksering i MEDLINE.</message>
+	<message key="plugins.importexport.pubmed.displayName">PubMed XML-eksport</message>
+	<message key="plugins.importexport.pubmed.description">Dette programtillegget eksporterer artikkelmetadata i PubMed XML-format for indeksering i MEDLINE</message>
 	
 	<message key="plugins.importexport.pubmed.export">Eksporter data</message>
 	<message key="plugins.importexport.pubmed.export.issues">Eksporter utgaver</message>
-	<message key="plugins.importexport.pubmed.export.selectIssue">Velg en utgave for eksport.</message>
+	<message key="plugins.importexport.pubmed.export.selectIssue">Velg en utgave for eksport</message>
 	<message key="plugins.importexport.pubmed.export.articles">Eksporter artikler</message>
-	<message key="plugins.importexport.pubmed.export.selectArticle">Velg artikler for eksport.</message>
+	<message key="plugins.importexport.pubmed.export.selectArticle">Velg artikler for eksport</message>
 	
 	<message key="plugins.importexport.pubmed.cliUsage">Bruk: 
 {$scriptName} {$pluginName} [xmlFileName] [journal_path] artikler [articleId1] [articleId2] ...
 {$scriptName} {$pluginName} [xmlFileName] [journal_path] utgave [issueId]</message>
-	<message key="plugins.importexport.pubmed.cliError">FEIL:</message>
+	<message key="plugins.importexport.pubmed.cliError">Feil:</message>
 
-	<message key="plugins.importexport.pubmed.export.error.issueNotFound">Ingen utgave stemmer med angitt utgave-ID "{$issueId}".</message>
-	<message key="plugins.importexport.pubmed.export.error.articleNotFound">Ingen artikkel stemmer med den angitte artikkel-ID "{$articleId}".</message>
+	<message key="plugins.importexport.pubmed.export.error.issueNotFound">Ingen utgave stemmer med angitt utgave-ID «{$issueId}».</message>
+	<message key="plugins.importexport.pubmed.export.error.articleNotFound">Ingen artikkel stemmer med den angitte artikkel-ID «{$articleId}».</message>
 
 
 </locale>
