--- a/plugins/paymethod/manual/locale/nb_NO/locale.xml
+++ b/plugins/paymethod/manual/locale/nb_NO/locale.xml
@@ -4,25 +4,25 @@
 <!--
   * plugins/paymethod/manual/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
   -->
  
 <locale name="nb_NO" full_name="Norsk bokmål">
-	<message key="plugins.paymethod.manual.displayName">Manuell betaling av gebyr</message>
-	<message key="plugins.paymethod.manual.description">Redaksjonsleder vil registrere og kvittere for brukernes innbetalinger manuelt (utenfor denne programvaren).</message>
-	<message key="plugins.paymethod.manual">Manuell betaling av gebyr</message>
-	<message key="plugins.paymethod.manual.settings">Innstillinger for Manuell betaling av gebyr</message>
+	<message key="plugins.paymethod.manual.displayName">Manuell betaling</message>
+	<message key="plugins.paymethod.manual.description">Dette programtillegget lar redaksjonslederen registrere og kvittere for brukernes innbetalinger manuelt (utenfor denne programvaren)</message>
+	<message key="plugins.paymethod.manual">Manuell betaling</message>
+	<message key="plugins.paymethod.manual.settings">Instrukser for manuell betaling</message>
 	<message key="plugins.paymethod.manual.settings.instructions">Instruks</message>
-	<message key="plugins.paymethod.manual.settings.manualInstructions">Instruks for gebyrinnbetaling for brukere som velger Manuell betaling av gebyr</message>
+	<message key="plugins.paymethod.manual.settings.manualInstructions">Instruks for innbetaling for brukere som velger manuell betaling</message>
 	
-	<message key="plugins.paymethod.manual.sendNotificationOfPayment">Send betalingsvarsel</message>
-	<message key="plugins.paymethod.manual.paymentNotification">Betalingsvarsel</message>
-	<message key="plugins.paymethod.manual.notificationSent">Betalingsvarsel sendt</message>
+	<message key="plugins.paymethod.manual.sendNotificationOfPayment">Send beskjed om betaling</message>
+	<message key="plugins.paymethod.manual.paymentNotification">Beskjed om betaling</message>
+	<message key="plugins.paymethod.manual.notificationSent">Beskjed om betaling sendt</message>
 	
 	<message key="plugins.paymethod.manual.purchase.title">Tittel</message>
-	<message key="plugins.paymethod.manual.purchase.fee">Gebyr</message>	
+	<message key="plugins.paymethod.manual.purchase.fee">Betaling</message>	
 </locale>
