--- a/plugins/reports/articles/locale/nb_NO/locale.xml
+++ b/plugins/reports/articles/locale/nb_NO/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/reports/articles/locale/nb_NO/locale.xml
   *
-  * Copyright (c) 2014-2018 Simon Fraser University
-  * Copyright (c) 2003-2018 John Willinsky
+  * Copyright (c) 2014-2016 Simon Fraser University Library
+  * Copyright (c) 2003-2016 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the nb_NO (Norsk bokmål) locale.
@@ -13,7 +13,7 @@
   -->
 
 <locale name="nb_NO" full_name="Norsk bokmål">
-	<message key="plugins.reports.articles.displayName">Artikkelliste</message>
-	<message key="plugins.reports.articles.description">Denne plugin'en implementerer en CSV-rapport som inneholder en liste av artiklene og deres informasjon.</message>
+	<message key="plugins.reports.articles.displayName">Artikler</message>
+	<message key="plugins.reports.articles.description">Dette programtillegget implementerer en CSV-rapport som inneholder en liste av artikler og tilhørende informasjon</message>
 	<message key="plugins.reports.articles.nodecision">Ingen beslutning</message>
 </locale>
